--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,9 @@ version: '3.8'
 
 services:
   db:
-    image: postgres:15-alpine
-    platform: ${PLATFORM:-linux/arm64}
+    image: postgres:15
     container_name: aegis-db
-    restart: unless-stopped
+    restart: always
     volumes:
       - db-data:/var/lib/postgresql/data
     environment:
@@ -23,19 +22,30 @@ services:
   backend:
     image: python:3.11-slim
     container_name: aegis-backend
-    restart: unless-stopped
+    restart: always
     working_dir: /app
     volumes:
       - ./backend:/app
       - /var/run/docker.sock:/var/run/docker.sock
-    command: sh -c "pip install -r requirements.txt && uvicorn app.main:app --host 0.0.0.0 --port 8080 --reload"
+    command: >
+      bash -c "
+        apt-get update && 
+        apt-get install -y curl wget gnupg2 lsb-release ca-certificates &&
+        curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh | sh -s -- -b /usr/local/bin &&
+        curl -sSfL https://raw.githubusercontent.com/anchore/grype/main/install.sh | sh -s -- -b /usr/local/bin &&
+        pip install -r requirements.txt &&
+        sleep 10 &&
+        uvicorn app.main:app --host 0.0.0.0 --port 8080 --reload
+      "
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     env_file: .env
     environment:
       - DOCKER_HOST=unix:///var/run/docker.sock
       - PYTHONUNBUFFERED=1
-      - DOCKER_API_VERSION=1.47
+      - DOCKER_API_VERSION=1.41
+      - SCANNER=grype
     networks:
       - aegis-net
     ports:
@@ -46,7 +56,7 @@ services:
   frontend:
     image: node:20-slim
     container_name: aegis-ui
-    restart: unless-stopped
+    restart: always
     working_dir: /app
     volumes:
       - ./frontend:/app
@@ -57,6 +67,8 @@ services:
       - aegis-net
     ports:
       - "3001:3000"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
 networks:
   aegis-net:
