--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,79 +1,67 @@
 version: '3.8'
 
 services:
+  # Сервис PostgreSQL
   db:
     image: postgres:15
     container_name: aegis-db
-    restart: always
+    restart: unless-stopped
+    env_file:
+      - .env
     volumes:
-      - db-data:/var/lib/postgresql/data
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: aegis
-    networks:
-      - aegis-net
+      - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "${POSTGRES_PORT:-5432}:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres} -d ${POSTGRES_DB:-aegis}"]
       interval: 10s
       timeout: 5s
       retries: 5
 
+  # Backend сервис
   backend:
-    image: python:3.11-slim
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
     container_name: aegis-backend
-    restart: always
-    working_dir: /app
+    restart: unless-stopped
+    depends_on:
+      - db
+    env_file:
+      - .env
     volumes:
       - ./backend:/app
-      - /var/run/docker.sock:/var/run/docker.sock
-    command: >
-      bash -c "
-        apt-get update && 
-        apt-get install -y curl wget gnupg2 lsb-release ca-certificates &&
-        curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh | sh -s -- -b /usr/local/bin &&
-        curl -sSfL https://raw.githubusercontent.com/anchore/grype/main/install.sh | sh -s -- -b /usr/local/bin &&
-        pip install -r requirements.txt &&
-        sleep 10 &&
-        uvicorn app.main:app --host 0.0.0.0 --port 8080 --reload
-      "
-    depends_on:
-      db:
-        condition: service_healthy
-    env_file: .env
-    environment:
-      - DOCKER_HOST=unix:///var/run/docker.sock
-      - PYTHONUNBUFFERED=1
-      - DOCKER_API_VERSION=1.41
-      - SCANNER=grype
-    networks:
-      - aegis-net
     ports:
-      - "8080:8080"
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
+      - "${BACKEND_PORT:-8000}:8000"
 
-  frontend:
-    image: node:20-slim
-    container_name: aegis-ui
-    restart: always
-    working_dir: /app
+  # Sidecar агент для локального хоста
+  agent:
+    build:
+      context: ./agent
+      dockerfile: Dockerfile
+    container_name: aegis-local-agent
+    restart: unless-stopped
+    env_file:
+      - .env
     volumes:
-      - ./frontend:/app
-    command: sh -c "npm install && npm run dev -- --host 0.0.0.0"
+      - /var/run/docker.sock:/var/run/docker.sock
+    ports:
+      - "${SIDECAR_PORT:-5000}:5000"
+
+  # Frontend сервис
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    container_name: aegis-frontend
+    restart: unless-stopped
+    environment:
+      - NEXT_PUBLIC_API_URL=http://backend:8000/v1
+    ports:
+      - "3000:3000"
     depends_on:
       - backend
-    networks:
-      - aegis-net
-    ports:
-      - "3001:3000"
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
-
-networks:
-  aegis-net:
-    driver: bridge
 
 volumes:
-  db-data:
-    name: aegis-db-data
+  postgres_data:
+    name: aegis-postgres-data
